# kreuzberg-research

./: .env.example  .gitignore  BENCHMARK_REPORT.md  CLAUDE.md  main.py  pyproject.toml  run_benchmark.py  run_evaluation.py  run_report.py
.planning/: PROJECT.md
.planning/phases/02-evaluation/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-reporting-recommendation/: 03-01-SUMMARY.md  03-02-SUMMARY.md
scripts/: generate_test_corpus.py  manage_manifest.py  manifest_utils.py
scripts/generators/: __init__.py  base.py  csv_generator.py  docx_generator.py  image_generator.py  pdf_generator.py  pptx_generator.py  xlsx_generator.py
src/benchmark/: __init__.py  config.py
src/benchmark/extractors/: __init__.py  iliad_extractor.py  kreuzberg_extractor.py  markitdown_extractor.py
src/benchmark/metrics/: __init__.py  ocr_accuracy.py  structural.py
test_documents/: manifest.json
test_documents/pptx/: sample_presentation.pptx
test_documents/xlsx/: 6120_Incentives_2023_Accrual.xlsx
tests/: conftest.py  test_evaluation_output.py  test_ocr_accuracy.py  test_report_output.py  test_structural.py
