[project]
name = "kreuzberg-research"
version = "0.1.0"
description = "Benchmark: Kreuzberg vs MarkItDown document-to-markdown conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kreuzberg==4.8.0",
    "markitdown[all]==0.1.5",
    "markitdown-ocr==0.1.0",
    "openai",
]

[dependency-groups]
dev = [
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]
